# bugsnag-cocos2dx

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md
.buildkite/: pipeline.yml
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: A.md  Bug_report.md
example/: CMakeLists.txt
example/Classes/: AppDelegate.cpp  Bugsnag.hpp  BugsnagAndroid.cpp  BugsnagCocoa.mm  HelloWorldScene.cpp
example/proj.android/: build.gradle  settings.gradle
example/proj.android/app/: AndroidManifest.xml  build.gradle
example/proj.ios_mac/: Podfile
example/proj.ios_mac/Disco.xcodeproj/: project.pbxproj
example/proj.ios_mac/Disco.xcodeproj/xcshareddata/xcschemes/: Disco-mobile.xcscheme
example/proj.ios_mac/ios/: Info.plist
example/proj.ios_mac/mac/: Info.plist
example/proj.win32/: Disco.sln
examples/example-cpp-app/: CMakeLists.txt  README.md  bugsnag
examples/example-cpp-app/Classes/: AppDelegate.cpp  HelloWorldScene.cpp  HelloWorldScene.h
examples/example-cpp-app/bugsnag/: CMakeLists.txt
examples/example-cpp-app/bugsnag/android/: Bugsnag.cpp
examples/example-cpp-app/bugsnag/android/bugsnag-plugin-android-cocos2dx/: build.gradle
examples/example-cpp-app/bugsnag/android/bugsnag-plugin-android-cocos2dx/src/main/java/com/bugsnag/android/: BugsnagCocos2dxPlugin.java  BugsnagCocos2dxPlugin.kt
examples/example-cpp-app/bugsnag/android/libs/: bugsnag-android-core.aar  bugsnag-plugin-android-anr.aar  bugsnag-plugin-android-ndk.aar
examples/example-cpp-app/bugsnag/include/BugsnagCocos2dx/: Bugsnag.hpp
examples/example-cpp-app/bugsnag/include/BugsnagCocos2dx/cocoa/: BugsnagCocos2dxPlugin.h
examples/example-cpp-app/cocos2d/cocos/platform/android/libcocos2dx/: build.gradle
examples/example-cpp-app/proj.android/: build.gradle  gradle.properties  settings.gradle
examples/example-cpp-app/proj.android/app/: AndroidManifest.xml  build.gradle
examples/example-cpp-app/proj.android/app/res/values/: strings.xml
examples/example-cpp-app/proj.android/app/src/org/cocos2dx/cpp/: AppActivity.java
examples/example-cpp-app/proj.android/gradle/wrapper/: gradle-wrapper.properties
examples/example-cpp-app/proj.ios_mac/example-cpp-app.xcodeproj/: project.pbxproj
examples/example-cpp-app/proj.ios_mac/example-cpp-app.xcodeproj/xcshareddata/xcschemes/: example-cpp-app-desktop.xcscheme  example-cpp-app-mobile.xcscheme
examples/example-cpp-app/proj.ios_mac/ios/: AppController.mm  Info.plist
examples/example-cpp-app/proj.ios_mac/mac/: Info.plist  main.mm
examples/example-cpp-app/proj.win32/: example-cpp-app.sln
scripts/: bump-version.sh  export-package.sh  get-release-notes.sh
src/: Bugsnag.hpp  BugsnagAndroid.cpp  BugsnagCocoa.mm  CMakeLists.txt  Configuration.hpp
src/android/: Bugsnag.cpp
src/android/bugsnag-plugin-android-cocos2dx/: build.gradle
src/android/bugsnag-plugin-android-cocos2dx/src/main/: AndroidManifest.xml
src/android/bugsnag-plugin-android-cocos2dx/src/main/java/com/bugsnag/android/: BugsnagCocos2dxPlugin.java  BugsnagCocos2dxPlugin.kt
src/cocoa/: Bugsnag.mm  BugsnagCocos2dxPlugin.h  BugsnagCocos2dxPlugin.m  BugsnagCocos2dxPlugin.mm  version.xcconfig
src/cocoa/BugsnagCocos2dx.xcodeproj/: project.pbxproj
src/cocoa/BugsnagCocos2dx.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/cocoa/BugsnagCocos2dx.xcodeproj/xcshareddata/xcschemes/: BugsnagCocos2dx.xcscheme
src/cocoa/Tests/: Tests.m  Tests.mm
